[gd_scene load_steps=11 format=3 uid="uid://sxpqsbattf23"]

[ext_resource type="Texture2D" uid="uid://delgfbn6hu7cu" path="res://assets/background.jpg" id="1_natt5"]
[ext_resource type="Script" uid="uid://bfrhad0dd04bs" path="res://scripts/mainmenu.gd" id="1_r3g3c"]
[ext_resource type="FontFile" uid="uid://dlg6nq04rwv0y" path="res://assets/PixelatedEleganceRegular-ovyAA.ttf" id="2_r3g3c"]
[ext_resource type="Texture2D" uid="uid://dvy632wycep6l" path="res://assets/Foozle_2DS0013_Void_EnemyFleet_2/Nairan/Designs - Base/PNGs/Nairan - Battlecruiser - Base.png" id="4_7yvfd"]
[ext_resource type="Texture2D" uid="uid://yjjed8k8ed03" path="res://assets/Foozle_2DS0013_Void_EnemyFleet_2/Nairan/Designs - Base/PNGs/Nairan - Dreadnought - Base.png" id="5_dfy5j"]
[ext_resource type="Texture2D" uid="uid://cuc6fel1rpmvw" path="res://assets/Foozle_2DS0013_Void_EnemyFleet_2/Nairan/Designs - Base/PNGs/Nairan - Frigate - Base.png" id="6_85riq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3vvtq"]
texture = ExtResource("1_natt5")
modulate_color = Color(0.48962224, 0.48962224, 0.48962218, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_natt5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r3g3c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s5g8n"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r3g3c")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3vvtq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -101.0
offset_right = 393.0
offset_bottom = 88.5
grow_vertical = 2

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_r3g3c")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_natt5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_r3g3c")
theme_override_styles/hover = SubResource("StyleBoxTexture_s5g8n")
text = "Start"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_r3g3c")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_natt5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_r3g3c")
theme_override_styles/hover = SubResource("StyleBoxTexture_s5g8n")
text = "Options
"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_r3g3c")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_natt5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_r3g3c")
theme_override_styles/hover = SubResource("StyleBoxTexture_s5g8n")
text = "Quit
"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -533.0
offset_top = 95.0
offset_right = -214.0
offset_bottom = 140.0
grow_horizontal = 0
theme_override_fonts/normal_font = ExtResource("2_r3g3c")
theme_override_font_sizes/normal_font_size = 50
text = "WarShips"
fit_content = true

[node name="controls" type="RichTextLabel" parent="."]
modulate = Color(0.63375676, 0.6337568, 0.63375676, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -537.0
offset_top = -106.0
offset_right = -218.0
offset_bottom = -51.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/normal_font = ExtResource("2_r3g3c")
theme_override_font_sizes/normal_font_size = 20
text = "WASD: movement
Space: Fire
"
fit_content = true

[node name="ship_select" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -546.0
offset_top = -23.5
offset_right = -186.0
offset_bottom = 23.5
grow_horizontal = 0
grow_vertical = 2
current_tab = 0
clip_tabs = false
all_tabs_in_front = true

[node name="cruiser" type="CheckBox" parent="ship_select"]
layout_mode = 2
text = "Cruiser"
icon = ExtResource("4_7yvfd")
metadata/_tab_index = 0

[node name="destroyer" type="CheckBox" parent="ship_select"]
visible = false
layout_mode = 2
text = "Destroyer"
icon = ExtResource("5_dfy5j")
metadata/_tab_index = 1

[node name="corvette" type="CheckBox" parent="ship_select"]
visible = false
layout_mode = 2
text = "Corvette"
icon = ExtResource("6_85riq")
metadata/_tab_index = 2

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="tab_selected" from="ship_select" to="." method="_on_ship_select_tab_selected"]
